# ce_assistant_test_back

./: config.py  pyproject.toml  session.py  test_get_all_store.py  test_get_item_barcode.py  test_get_items.py  test_get_store_location.py
client/: assistent.py  utils.py
client/assistent/: client.py  enum.py
client/one_c/: client.py  enum.py
model/: auth.py  cart.py  item.py  payment.py  store.py
test/: test_assistant_desember.py  test_client_assistatnt.py  test_close_cart_with_customer_and_apply_bonuses.py  test_create_cart_by_store.py  test_delete_item_in_cart.py  test_get_all_store.py  test_get_cart_cart.py  test_order_creation_scenario_negative_item.py  test_order_creation_scenario_positive.py  test_order_creation_scenario_with_close_cart.py  test_order_scenario_with_saving_uuid_store.py  test_patch_count_item_in_cart.py  test_post_cart.py  test_put_customer.py  test_put_items_in_cart.py  test_sended_cart_with_null_item.py
test/old/: test_apply_bonuses.py  test_client_assistatnt.py  test_delete_customer.py  test_get_cart_cart.py  test_get_item_barcode.py  test_get_items.py  test_get_store_division.py  (+2 more)
test_backend/: test_close_cart_with_apply_bonuses_without_customer.py  test_order_creation_scenario_negtive.py  test_order_creation_scenario_positiveee.py  test_order_creation_scenario_with_change_customer.py  test_order_one_c.py  test_sended_cart_with_change_customer.py  test_sended_cart_with_customer.py  test_sended_cart_with_item.py
test_frontend/: conftest.py  test_cart.py  test_cart_negative.py  test_cart_positive.py  test_login.py
(+6 files in other folders)
