[tool.poetry]
name = "ce-assistant-test-back"
version = "0.1.0"
description = ""
authors = ["tsepeleva.natalia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
django = "^5.1.3"
playwright = "^1.49.1"
pytest-playwright = "^0.6.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"